compiler/driver/src/request/preflight/tests/core_library/snapshots/scoopc__request__preflight__tests__core_library__calls__initialization_call_combined_hir.snap
---
source: compiler/driver/src/request/preflight/tests/core_library/calls.rs
expression: dump.text()
---
Module
  object UserCache <object0 type0 value0 root0 init0>
    field0 property0: Int
    property0 val value: Int getter0=storage <stored field0 init=expression>
  property1 val eager: Int getter1=body($get$eager) <stored global0 init1>
  val eager: Int <global0 managed>
  fun $init$body$0(): Unit
    assign singleton-root#0
      ClassInit UserCache : UserCache
  fun $init$ensure$0(): Unit
  fun selectedValue(useCache: Boolean): Int
    if
      Local useCache : Boolean
      val local1
        FieldAccess class field value : Int
          SingletonValue UserCache : UserCache
      val local2
        Local $dependency.argument.0 : Int
      assign $result.0
        Call external #1 : Int
          Local $dependency.parameter.value : Int
    else
      val local3
        Call $get$eager : Int
      val local4
        Local $dependency.argument.0 : Int
      assign $result.0
        Call external #0 : Int
          Local $dependency.parameter.value : Int
    return
      Local $result.0 : Int
  fun main(): Unit
    val local0
      BoolLiteral true : Boolean
    val local1
      Local $argument.0 : Boolean
    val local2
      Call selectedValue : Int
        Local $parameter.useCache : Boolean
  fun $init$body$1(): Unit
    val local0
      IntegerLiteral 40 : Int
    val local1
      Local $dependency.argument.0 : Int
    assign global eager
      Call external #1 : Int
        Local $dependency.parameter.value : Int
  fun $init$ensure$1(): Unit
  fun $get$eager(): Int
    ensure init1 top-level:eager
    return
      GlobalRead eager : Int
  output executable main
