compiler/driver/src/request/preflight/tests/core_library/snapshots/scoopc__request__preflight__tests__core_library__calls__initialization_call_combined_lir.snap
---
source: compiler/driver/src/request/preflight/tests/core_library/calls.rs
expression: dump.text()
---
Module
  global @scoop$1$ss$f5d8a305e61d3522d5dce0fd269de66ee02ce0952fdd13e9b514607210fc8739 : i32 scan=none
  global @scoop$1$ss$d38be6661c10ead24d31636ba0210c0eabf9fba4e274cc29a3b2920d8a4bef1f : ptr<managed> scan=refs[0]
  global @scoop$1$ss$787983a4cc2dd9c5fc68204b58fdd4357815635a785cd3b3701eaba28d515a99 : ptr<managed> scan=refs[0]
  global @scoop$1$ss$addea2de7f76c23868a6546b2afcd18200ea8ae819903047718446fff04d1143 : ptr<managed> scan=refs[0]
  global @scoop$1$ss$229a4d048049cf9bf3e032011c7d4e6761bc12c77fae79ba745ea06c32b07585 : ptr<managed> scan=refs[0]
  init0 top-level:eager storage=@scoop$1$ss$f5d8a305e61d3522d5dce0fd269de66ee02ce0952fdd13e9b514607210fc8739 failure=@scoop$1$ss$787983a4cc2dd9c5fc68204b58fdd4357815635a785cd3b3701eaba28d515a99 initializer=@scoop$1$cb$f8d15f3b0b1a9bfef24aeb80b33a4161a0d2be12c7980d60f86b87f740a289a4 ensure=@scoop$1$cb$eaa491826e5c6768a9769de4d16aa0750bb6f1e213b983e191afc98c761802f1 deps=[]
  init1 object:UserCache lazy storage=@scoop$1$ss$d38be6661c10ead24d31636ba0210c0eabf9fba4e274cc29a3b2920d8a4bef1f failure=@scoop$1$ss$addea2de7f76c23868a6546b2afcd18200ea8ae819903047718446fff04d1143 initializer=@scoop$1$cb$f0a0d78f67a026f49521f6dddf721bad60d0cfae4613c26f3d4b831da60e1bc7 ensure=@scoop$1$cb$0758fa399ab12cdb281d3bad8d70c1f82654243504d627e504e621460fc9d6f4 deps=[]
  fun @scoop$1$cb$f0a0d78f67a026f49521f6dddf721bad60d0cfae4613c26f3d4b831da60e1bc7() -> void
    local %0 $new.1: ptr<managed>
  block entry
    poll managed-void-target1 sp<managed-poll:0> live=[]
    call managed-direct-target0 sp<managed-call:0> live=[] t0 = sig=direct0 (ptr<metadata>, machine<byte-size>) -> ptr<managed> runtime @scoop_rt_alloc(td0, machine<byte-size>(ByteSize(24)))
    store t0 -> local0
    call managed-void-target0 sp<managed-call:1> live=[local0:ptr<managed>@0] sig=void0 (ptr<managed>) local-fn7(local0)
    t1 = aggregate () : {}
    global_store global1, local0
    ret
  fun @scoop$1$cb$0758fa399ab12cdb281d3bad8d70c1f82654243504d627e504e621460fc9d6f4() -> void
    local %0 $init.state: machine<initialization-outcome>
    local %1 $init.caught: ptr<managed>
    local %2 $init.materialized: ptr<managed>
    local %3 $init.failure: ptr<managed>
    local %4 $init.message: ptr<managed>
    local %5 $sc.1: exception_record
    local %6 $sc.2: ptr<raw>
    local %7 $sc.3: ptr<managed>
  block entry
    poll managed-void-target4 sp<managed-poll:0> live=[]
    call managed-direct-target0 sp<managed-call:0> live=[] t0 = sig=direct0 (ptr<metadata>) -> machine<initialization-outcome> runtime @scoop_rt_init_enter(init1)
    store t0 -> local0
    t1 = MachineEq(InitializationOutcome) local0, machine<initialization-outcome>(InitializationOutcome(RunInitializer)) : i1
    cbr t1 then @if.then.1 else @if.else.2
  block if.then.1
    br @try.body.11
  block if.else.2
    t2 = MachineEq(InitializationOutcome) local0, machine<initialization-outcome>(InitializationOutcome(Ready)) : i1
    cbr t2 then @if.then.14 else @if.else.15
  block if.merge.3
    ret
  block try.unwind.4
    (t3, t4) = landingpad : (exception_record, ptr<raw>)
    store t3 -> local5
    store t4 -> local6
    br @try.dispatch.5
  block try.dispatch.5
    t5 = begin_catch local6 : ptr<managed>
    store t5 -> local7
    br @try.catch.12
  block try.handler_pad.6
    (t6, t7) = cleanup_pad : (exception_record, ptr<raw>)
    store t6 -> local5
    store t7 -> local6
    br @try.handler_cleanup.7
  block try.handler_cleanup.7
    end_catch
    resume local5
  block try.end.10
    br @if.merge.3
  block try.body.11
    invoke managed-void-target0 sp<managed-invoke:0> roots=[] sig=void0 () local-fn0() normal @invoke.normal.1 unwind @try.unwind.4
    br @invoke.normal.1
  block try.catch.12
    store local7 -> local1
    br @scope.13
  block scope.13
    call managed-direct-target1 sp<managed-call:4> live=[local1:ptr<managed>@0] t12 = sig=direct1 (ptr<managed>) -> ptr<managed> runtime @scoop_rt_materialize_exception(local1)
    store t12 -> local2
    call managed-void-target2 sp<managed-call:5> live=[local2:ptr<managed>@0] sig=void2 (ptr<metadata>, ptr<managed>) runtime @scoop_rt_init_fail(init1, local2)
    t13 = aggregate () : {}
    invoke no-gc-void-target0 sig=void3 (ptr<managed>) runtime @scoop_rt_throw(local2) normal @throw.normal.2 unwind @try.handler_pad.6
    br @throw.normal.2
  block if.then.14
    br @if.merge.16
  block if.else.15
    t14 = MachineEq(InitializationOutcome) local0, machine<initialization-outcome>(InitializationOutcome(Failed)) : i1
    cbr t14 then @if.then.17 else @if.else.18
  block if.merge.16
    br @if.merge.3
  block if.then.17
    call managed-direct-target2 sp<managed-call:3> live=[] t15 = sig=direct2 (ptr<metadata>) -> ptr<managed> runtime @scoop_rt_init_failure(init1)
    store t15 -> local3
    throw local3
    unreachable
  block if.else.18
    call managed-direct-target3 sp<managed-call:1> live=[] t16 = sig=direct3 (ptr<metadata>) -> ptr<managed> runtime @scoop_rt_init_cycle_message(init1)
    store t16 -> local4
    call managed-void-target3 sp<managed-call:2> live=[local4:ptr<managed>@0] sig=void4 (ptr<managed>) external-fn0(local4)
    t17 = aggregate () : {}
    unreachable
  block invoke.normal.1
    t10 = aggregate () : {}
    call managed-void-target1 sp<managed-call:6> live=[] sig=void1 (ptr<metadata>) runtime @scoop_rt_init_succeed(init1)
    t11 = aggregate () : {}
    br @try.end.10
  block throw.normal.2
    unreachable
  fun @scoop$1$cb$35aa9a08f8f1495e872b655228932fd95cc186d35258676402d99ea0c15638f6(i1) -> i32
    local %0 $dependency.argument.0: i32
    local %1 $dependency.parameter.value: i32
    local %2 $dependency.argument.0: i32
    local %3 $dependency.parameter.value: i32
    local %4 $result.0: i32
    local %5 $call.1: i32
    local %6 $call.2: i32
  block entry
    poll managed-void-target1 sp<managed-poll:0> live=[]
    cbr param0 then @if.then.1 else @if.else.2
  block if.then.1
    call managed-void-target0 sp<managed-call:2> live=[] sig=void0 () local-fn1()
    t0 = aggregate () : {}
    t1 = global_load global1 : ptr<managed>
    t2 = heap_load t1 +16 : i32
    store t2 -> local0
    store local0 -> local1
    call managed-direct-target0 sp<managed-call:3> live=[] t3 = sig=direct0 (i32) -> i32 external-fn2(local1)
    store t3 -> local5
    store local5 -> local4
    br @if.merge.3
  block if.else.2
    call managed-direct-target1 sp<managed-call:0> live=[] t4 = sig=direct1 () -> i32 local-fn6()
    store t4 -> local2
    store local2 -> local3
    call managed-direct-target2 sp<managed-call:1> live=[] t5 = sig=direct2 (i32) -> i32 external-fn1(local3)
    store t5 -> local6
    store local6 -> local4
    br @if.merge.3
  block if.merge.3
    ret local4
  fun @scoop$1$cb$231a9ff4d6fc765297e8eb2c6cee080892fcc69d9b541b4356dd49d5e5726fde() -> void
    local %0 $argument.0: i1
    local %1 $parameter.useCache: i1
    local %2 result: i32
  block entry
    poll managed-void-target0 sp<managed-poll:0> live=[]
    store true -> local0
    store local0 -> local1
    call managed-direct-target0 sp<managed-call:0> live=[] t0 = sig=direct0 (i1) -> i32 local-fn2(local1)
    store t0 -> local2
    ret
  fun @scoop$1$cb$f8d15f3b0b1a9bfef24aeb80b33a4161a0d2be12c7980d60f86b87f740a289a4() -> void
    local %0 $dependency.argument.0: i32
    local %1 $dependency.parameter.value: i32
    local %2 $call.1: i32
  block entry
    poll managed-void-target0 sp<managed-poll:0> live=[]
    store integer<Int>(0x00000028) -> local0
    store local0 -> local1
    call managed-direct-target0 sp<managed-call:0> live=[] t0 = sig=direct0 (i32) -> i32 external-fn2(local1)
    store t0 -> local2
    global_store global0, local2
    ret
  fun @scoop$1$cb$eaa491826e5c6768a9769de4d16aa0750bb6f1e213b983e191afc98c761802f1() -> void
    local %0 $init.state: machine<initialization-outcome>
    local %1 $init.caught: ptr<managed>
    local %2 $init.materialized: ptr<managed>
    local %3 $init.failure: ptr<managed>
    local %4 $init.message: ptr<managed>
    local %5 $sc.1: exception_record
    local %6 $sc.2: ptr<raw>
    local %7 $sc.3: ptr<managed>
  block entry
    poll managed-void-target4 sp<managed-poll:0> live=[]
    call managed-direct-target0 sp<managed-call:0> live=[] t0 = sig=direct0 (ptr<metadata>) -> machine<initialization-outcome> runtime @scoop_rt_init_enter(init0)
    store t0 -> local0
    t1 = MachineEq(InitializationOutcome) local0, machine<initialization-outcome>(InitializationOutcome(RunInitializer)) : i1
    cbr t1 then @if.then.1 else @if.else.2
  block if.then.1
    br @try.body.11
  block if.else.2
    t2 = MachineEq(InitializationOutcome) local0, machine<initialization-outcome>(InitializationOutcome(Ready)) : i1
    cbr t2 then @if.then.14 else @if.else.15
  block if.merge.3
    ret
  block try.unwind.4
    (t3, t4) = landingpad : (exception_record, ptr<raw>)
    store t3 -> local5
    store t4 -> local6
    br @try.dispatch.5
  block try.dispatch.5
    t5 = begin_catch local6 : ptr<managed>
    store t5 -> local7
    br @try.catch.12
  block try.handler_pad.6
    (t6, t7) = cleanup_pad : (exception_record, ptr<raw>)
    store t6 -> local5
    store t7 -> local6
    br @try.handler_cleanup.7
  block try.handler_cleanup.7
    end_catch
    resume local5
  block try.end.10
    br @if.merge.3
  block try.body.11
    invoke managed-void-target0 sp<managed-invoke:0> roots=[] sig=void0 () local-fn4() normal @invoke.normal.1 unwind @try.unwind.4
    br @invoke.normal.1
  block try.catch.12
    store local7 -> local1
    br @scope.13
  block scope.13
    call managed-direct-target1 sp<managed-call:4> live=[local1:ptr<managed>@0] t12 = sig=direct1 (ptr<managed>) -> ptr<managed> runtime @scoop_rt_materialize_exception(local1)
    store t12 -> local2
    call managed-void-target2 sp<managed-call:5> live=[local2:ptr<managed>@0] sig=void2 (ptr<metadata>, ptr<managed>) runtime @scoop_rt_init_fail(init0, local2)
    t13 = aggregate () : {}
    invoke no-gc-void-target0 sig=void3 (ptr<managed>) runtime @scoop_rt_throw(local2) normal @throw.normal.2 unwind @try.handler_pad.6
    br @throw.normal.2
  block if.then.14
    br @if.merge.16
  block if.else.15
    t14 = MachineEq(InitializationOutcome) local0, machine<initialization-outcome>(InitializationOutcome(Failed)) : i1
    cbr t14 then @if.then.17 else @if.else.18
  block if.merge.16
    br @if.merge.3
  block if.then.17
    call managed-direct-target2 sp<managed-call:3> live=[] t15 = sig=direct2 (ptr<metadata>) -> ptr<managed> runtime @scoop_rt_init_failure(init0)
    store t15 -> local3
    throw local3
    unreachable
  block if.else.18
    call managed-direct-target3 sp<managed-call:1> live=[] t16 = sig=direct3 (ptr<metadata>) -> ptr<managed> runtime @scoop_rt_init_cycle_message(init0)
    store t16 -> local4
    call managed-void-target3 sp<managed-call:2> live=[local4:ptr<managed>@0] sig=void4 (ptr<managed>) external-fn0(local4)
    t17 = aggregate () : {}
    unreachable
  block invoke.normal.1
    t10 = aggregate () : {}
    call managed-void-target1 sp<managed-call:6> live=[] sig=void1 (ptr<metadata>) runtime @scoop_rt_init_succeed(init0)
    t11 = aggregate () : {}
    br @try.end.10
  block throw.normal.2
    unreachable
  fun @scoop$1$cb$c5b0ef8aebd6f0af8f03dec22de91bb9755c015b98b0d9e7fa4bc6adf429d6da() -> i32
  block entry
    poll managed-void-target1 sp<managed-poll:0> live=[]
    call managed-void-target0 sp<managed-call:0> live=[] sig=void0 () local-fn5()
    t0 = aggregate () : {}
    t1 = global_load global0 : i32
    ret t1
  fun @scoop$1$cb$831bd4f3c73058d74ada30da5e1ad52a1c71d613f7f0d978af0ed68a5d3023cd(ptr<managed>) -> void
    local %0 $dependency.parameter.value: i32
    local %1 $call.1: i32
  block entry
    poll managed-void-target0 sp<managed-poll:0> live=[param0:ptr<managed>@0]
    store integer<Int>(0x00000007) -> local0
    call managed-direct-target0 sp<managed-call:0> live=[param0:ptr<managed>@0] t0 = sig=direct0 (i32) -> i32 external-fn1(local0)
    store t0 -> local1
    heap_store param0 +16 local1
    ret
  fun @scoop$1$cb$35c3dc5c3c3d7d1d3b6d2a47d7e6d6c88d61bca0e08966efecf4802178cdefa3() -> i32
  block entry
    poll managed-void-target1 sp<managed-poll:0> live=[]
    invoke managed-void-target0 sp<managed-invoke:0> roots=[] sig=void0 () local-fn3() normal @success unwind @failure
    br @success
  block success
    ret integer<UInt>(0x00000000)
  block failure
    (t0, t1) = landingpad : (exception_record, ptr<raw>)
    t2 = begin_catch t1 : ptr<managed>
    global_store global4, t2
    end_catch
    ret integer<UInt>(0x00000001)
  fun @scoop$1$cb$417bc1e4885756a285d88b9ab5080ec838f43d1727d9f8c8292c5cf46c7418d2() -> i32
  block entry
    poll managed-void-target1 sp<managed-poll:0> live=[]
    invoke managed-void-target0 sp<managed-invoke:0> roots=[] sig=void0 () local-fn5() normal @success unwind @failure
    br @success
  block success
    ret integer<UInt>(0x00000000)
  block failure
    (t0, t1) = landingpad : (exception_record, ptr<raw>)
    t2 = begin_catch t1 : ptr<managed>
    end_catch
    ret integer<UInt>(0x00000001)
  td td0 UserCache @scoop$1$td$098cc31a02098ecca66591c7756599d2fccfe79fd2ec6aa2380d22b93729f0f9 type-id=6351018757997357437 shape=FixedObject minimum-size=24 align=8 parent=none vtable=[] itables=[]
  layout UserCache value size=8 align=8 refs=[0]
  layout UserCache size=24 align=8 refs=[]
  output executable @scoop$1$cb$231a9ff4d6fc765297e8eb2c6cee080892fcc69d9b541b4356dd49d5e5726fde
