compiler/driver/src/request/preflight/tests/core_library/snapshots/scoopc__request__preflight__tests__core_library__calls__initialization_call_combined_mir.snap
---
source: compiler/driver/src/request/preflight/tests/core_library/calls.rs
expression: dump.text()
---
Module
  global0 eager: Int managed initial=zeroed-for-runtime-unit
  global1 $singleton$UserCache: UserCache managed initial=zeroed-for-runtime-unit
  global2 $init$failure$0: Any managed initial=zeroed-for-runtime-unit
  global3 $init$failure$1: Any managed initial=zeroed-for-runtime-unit
  init0 top-level:eager eager global0 initializer=@fn4 ensure=@fn5 failure=2 deps=[]
  init1 object:UserCache singleton lazy global1 initializer=@fn0 ensure=@fn1 failure=3 deps=[]
  class UserCache vtable=0 itables=0
  fun $init$body$0 @fn0() -> Unit
    bb0 entry
      assign $new.1
        Type UserCache
        ClassAlloc UserCache
      call @fn7 direct
        Type UserCache
        Local $new.1
      global_assign $singleton$UserCache
        Type UserCache
        Local $new.1
      return
  fun $init$ensure$0 @fn1() -> Unit
    bb0 entry
      call $init.state: machine<initialization-outcome> = @scoop_rt_init_enter direct
        Type Ptr<Unit>
        InitializationUnitAddress init1 object:UserCache
      branch bb1 bb2
        Type Boolean
        Binary MachineEq(InitializationOutcome)
          Type machine<initialization-outcome>
          Local $init.state
          Type machine<initialization-outcome>
          MachineScalarLiteral InitializationOutcome(RunInitializer)
    bb1 if.then.1
      goto bb11
    bb2 if.else.2
      branch bb14 bb15
        Type Boolean
        Binary MachineEq(InitializationOutcome)
          Type machine<initialization-outcome>
          Local $init.state
          Type machine<initialization-outcome>
          MachineScalarLiteral InitializationOutcome(Ready)
    bb3 if.merge.3
      return
    bb4 try.unwind.4
      landing_pad cleanup=false
      goto bb5
    bb5 try.dispatch.5
      begin_catch
      goto bb12
    bb6 try.handler_pad.6
      landing_pad cleanup=true
      goto bb7
    bb7 try.handler_cleanup.7
      end_catch
      resume
    bb8 try.exit_pad.8
      landing_pad cleanup=true
      goto bb9
    bb9 try.exit_cleanup.9
      end_catch
      resume
    bb10 try.end.10
      goto bb3
    bb11 try.body.11 unwind bb4
      call @fn0 direct
      call @scoop_rt_init_succeed direct
        Type Ptr<Unit>
        InitializationUnitAddress init1 object:UserCache
      goto bb10
    bb12 try.catch.12
      call $catch.1: Any = @scoop_rt_materialize_exception direct
        Type Any
        CaughtException
      val $init.caught: Any
        Type Any
        Retype Any
          Type Any
          Local $catch.1
      goto bb13
    bb13 scope.13 unwind bb6
      call @scoop_rt_init_fail direct
        Type Ptr<Unit>
        InitializationUnitAddress init1 object:UserCache
        Type Any
        Local $init.caught
      throw unwind bb6
        Type Any
        Local $init.caught
    bb14 if.then.14
      goto bb16
    bb15 if.else.15
      branch bb17 bb18
        Type Boolean
        Binary MachineEq(InitializationOutcome)
          Type machine<initialization-outcome>
          Local $init.state
          Type machine<initialization-outcome>
          MachineScalarLiteral InitializationOutcome(Failed)
    bb16 if.merge.16
      goto bb3
    bb17 if.then.17
      call $init.failure: Any = @scoop_rt_init_failure direct
        Type Ptr<Unit>
        InitializationUnitAddress init1 object:UserCache
      throw
        Type Any
        Local $init.failure
    bb18 if.else.18
      call $init.message: String = @scoop_rt_init_cycle_message direct
        Type Ptr<Unit>
        InitializationUnitAddress init1 object:UserCache
      call external2 direct
        Type String
        Local $init.message
      unreachable
    bb19 if.merge.19
      unreachable
  fun selectedValue @fn2(useCache: Boolean) -> Int
    bb0 entry
      branch bb1 bb2
        Type Boolean
        Local useCache
    bb1 if.then.1
      call @fn1 direct
      val $dependency.argument.0: Int
        Type Int
        FieldAccess 0
          Type UserCache
          GlobalRead $singleton$UserCache
      val $dependency.parameter.value: Int
        Type Int
        Local $dependency.argument.0
      call $call.1: Int = external1 direct
        Type Int
        Local $dependency.parameter.value
      assign $result.0
        Type Int
        Local $call.1
      goto bb3
    bb2 if.else.2
      call $dependency.argument.0: Int = @fn6 direct
      val $dependency.parameter.value: Int
        Type Int
        Local $dependency.argument.0
      call $call.2: Int = external0 direct
        Type Int
        Local $dependency.parameter.value
      assign $result.0
        Type Int
        Local $call.2
      goto bb3
    bb3 if.merge.3
      return
        Type Int
        Local $result.0
  fun main @fn3() -> Unit
    bb0 entry
      val $argument.0: Boolean
        Type Boolean
        BoolLiteral true
      val $parameter.useCache: Boolean
        Type Boolean
        Local $argument.0
      call result: Int = @fn2 direct
        Type Boolean
        Local $parameter.useCache
      return
  fun $init$body$1 @fn4() -> Unit
    bb0 entry
      val $dependency.argument.0: Int
        Type Int
        IntegerLiteral Int value=40 bits=0x00000028
      val $dependency.parameter.value: Int
        Type Int
        Local $dependency.argument.0
      call $call.1: Int = external1 direct
        Type Int
        Local $dependency.parameter.value
      global_assign eager
        Type Int
        Local $call.1
      return
  fun $init$ensure$1 @fn5() -> Unit
    bb0 entry
      call $init.state: machine<initialization-outcome> = @scoop_rt_init_enter direct
        Type Ptr<Unit>
        InitializationUnitAddress init0 top-level:eager
      branch bb1 bb2
        Type Boolean
        Binary MachineEq(InitializationOutcome)
          Type machine<initialization-outcome>
          Local $init.state
          Type machine<initialization-outcome>
          MachineScalarLiteral InitializationOutcome(RunInitializer)
    bb1 if.then.1
      goto bb11
    bb2 if.else.2
      branch bb14 bb15
        Type Boolean
        Binary MachineEq(InitializationOutcome)
          Type machine<initialization-outcome>
          Local $init.state
          Type machine<initialization-outcome>
          MachineScalarLiteral InitializationOutcome(Ready)
    bb3 if.merge.3
      return
    bb4 try.unwind.4
      landing_pad cleanup=false
      goto bb5
    bb5 try.dispatch.5
      begin_catch
      goto bb12
    bb6 try.handler_pad.6
      landing_pad cleanup=true
      goto bb7
    bb7 try.handler_cleanup.7
      end_catch
      resume
    bb8 try.exit_pad.8
      landing_pad cleanup=true
      goto bb9
    bb9 try.exit_cleanup.9
      end_catch
      resume
    bb10 try.end.10
      goto bb3
    bb11 try.body.11 unwind bb4
      call @fn4 direct
      call @scoop_rt_init_succeed direct
        Type Ptr<Unit>
        InitializationUnitAddress init0 top-level:eager
      goto bb10
    bb12 try.catch.12
      call $catch.1: Any = @scoop_rt_materialize_exception direct
        Type Any
        CaughtException
      val $init.caught: Any
        Type Any
        Retype Any
          Type Any
          Local $catch.1
      goto bb13
    bb13 scope.13 unwind bb6
      call @scoop_rt_init_fail direct
        Type Ptr<Unit>
        InitializationUnitAddress init0 top-level:eager
        Type Any
        Local $init.caught
      throw unwind bb6
        Type Any
        Local $init.caught
    bb14 if.then.14
      goto bb16
    bb15 if.else.15
      branch bb17 bb18
        Type Boolean
        Binary MachineEq(InitializationOutcome)
          Type machine<initialization-outcome>
          Local $init.state
          Type machine<initialization-outcome>
          MachineScalarLiteral InitializationOutcome(Failed)
    bb16 if.merge.16
      goto bb3
    bb17 if.then.17
      call $init.failure: Any = @scoop_rt_init_failure direct
        Type Ptr<Unit>
        InitializationUnitAddress init0 top-level:eager
      throw
        Type Any
        Local $init.failure
    bb18 if.else.18
      call $init.message: String = @scoop_rt_init_cycle_message direct
        Type Ptr<Unit>
        InitializationUnitAddress init0 top-level:eager
      call external2 direct
        Type String
        Local $init.message
      unreachable
    bb19 if.merge.19
      unreachable
  fun $get$eager @fn6() -> Int
    bb0 entry
      call @fn5 direct
      return
        Type Int
        GlobalRead eager
  fun init.UserCache.$c0 @fn7(this: UserCache) -> Unit
    bb0 entry
      val $dependency.parameter.value: Int
        Type Int
        IntegerLiteral Int value=7 bits=0x00000007
      call $call.1: Int = external0 direct
        Type Int
        Local $dependency.parameter.value
      field_set 0
        Type UserCache
        Local this
        Type Int
        Local $call.1
      return
  output executable @fn3
