compiler/driver/src/request/preflight/tests/core_library/snapshots/scoopc__request__preflight__tests__core_library__calls__initialization_call_hir.snap
---
source: compiler/driver/src/request/preflight/tests/core_library/calls.rs
expression: dump.text()
---
Module
  property0 val initialized: Int getter0=body($get$initialized) <stored global0 init0>
  val initialized: Int <global0 managed>
  fun main(): Unit
    val local0
      Call $get$initialized : Int
  fun $init$body$0(): Unit
    val local0
      IntegerLiteral 40 : Int
    val local1
      Local $dependency.argument.0 : Int
    assign global initialized
      Call external #0 : Int
        Local $dependency.parameter.value : Int
  fun $init$ensure$0(): Unit
  fun $get$initialized(): Int
    ensure init0 top-level:initialized
    return
      GlobalRead initialized : Int
  output executable main
