compiler/driver/src/request/preflight/tests/core_library/snapshots/scoopc__request__preflight__tests__core_library__calls__initialization_call_lir.snap
---
source: compiler/driver/src/request/preflight/tests/core_library/calls.rs
expression: dump.text()
---
Module
  global @scoop$1$ss$8548dcfe40eb1ef73035c6e7ca2a8eb942156ae41390c6f386afe3021406cd69 : i32 scan=none
  global @scoop$1$ss$4bfa4e91b9789aa4717f803812762829e9690e7ca44afe227c8dfab446959922 : ptr<managed> scan=refs[0]
  global @scoop$1$ss$229a4d048049cf9bf3e032011c7d4e6761bc12c77fae79ba745ea06c32b07585 : ptr<managed> scan=refs[0]
  init0 top-level:initialized storage=@scoop$1$ss$8548dcfe40eb1ef73035c6e7ca2a8eb942156ae41390c6f386afe3021406cd69 failure=@scoop$1$ss$4bfa4e91b9789aa4717f803812762829e9690e7ca44afe227c8dfab446959922 initializer=@scoop$1$cb$a233819fd31f871d424e8de076c6c7d906189a565adb918bb8a9bb87d41ec27f ensure=@scoop$1$cb$1caf0857103679f0618e90bc63705c98e593e6a1f2ad149f320588f69b165397 deps=[]
  fun @scoop$1$cb$231a9ff4d6fc765297e8eb2c6cee080892fcc69d9b541b4356dd49d5e5726fde() -> void
    local %0 value: i32
  block entry
    poll managed-void-target0 sp<managed-poll:0> live=[]
    call managed-direct-target0 sp<managed-call:0> live=[] t0 = sig=direct0 () -> i32 local-fn3()
    store t0 -> local0
    ret
  fun @scoop$1$cb$a233819fd31f871d424e8de076c6c7d906189a565adb918bb8a9bb87d41ec27f() -> void
    local %0 $dependency.argument.0: i32
    local %1 $dependency.parameter.value: i32
    local %2 $call.1: i32
  block entry
    poll managed-void-target0 sp<managed-poll:0> live=[]
    store integer<Int>(0x00000028) -> local0
    store local0 -> local1
    call managed-direct-target0 sp<managed-call:0> live=[] t0 = sig=direct0 (i32) -> i32 external-fn0(local1)
    store t0 -> local2
    global_store global0, local2
    ret
  fun @scoop$1$cb$1caf0857103679f0618e90bc63705c98e593e6a1f2ad149f320588f69b165397() -> void
    local %0 $init.state: machine<initialization-outcome>
    local %1 $init.caught: ptr<managed>
    local %2 $init.failure: ptr<managed>
    local %3 $init.message: ptr<managed>
    local %4 $catch.1: ptr<managed>
    local %5 $sc.1: exception_record
    local %6 $sc.2: ptr<raw>
    local %7 $sc.3: ptr<managed>
  block entry
    poll managed-void-target4 sp<managed-poll:0> live=[]
    call managed-direct-target0 sp<managed-call:0> live=[] t0 = sig=direct0 (ptr<metadata>) -> machine<initialization-outcome> runtime @scoop_rt_init_enter(init0)
    store t0 -> local0
    t1 = MachineEq(InitializationOutcome) local0, machine<initialization-outcome>(InitializationOutcome(RunInitializer)) : i1
    cbr t1 then @if.then.1 else @if.else.2
  block if.then.1
    br @try.body.11
  block if.else.2
    t2 = MachineEq(InitializationOutcome) local0, machine<initialization-outcome>(InitializationOutcome(Ready)) : i1
    cbr t2 then @if.then.14 else @if.else.15
  block if.merge.3
    ret
  block try.unwind.4
    (t3, t4) = landingpad : (exception_record, ptr<raw>)
    store t3 -> local5
    store t4 -> local6
    br @try.dispatch.5
  block try.dispatch.5
    t5 = begin_catch local6 : ptr<managed>
    store t5 -> local7
    br @try.catch.12
  block try.handler_pad.6
    (t6, t7) = cleanup_pad : (exception_record, ptr<raw>)
    store t6 -> local5
    store t7 -> local6
    br @try.handler_cleanup.7
  block try.handler_cleanup.7
    end_catch
    resume local5
  block try.end.10
    br @if.merge.3
  block try.body.11
    invoke managed-void-target0 sp<managed-invoke:0> roots=[] sig=void0 () local-fn1() normal @invoke.normal.1 unwind @try.unwind.4
    br @invoke.normal.1
  block try.catch.12
    call managed-direct-target1 sp<managed-call:4> live=[local7:ptr<managed>@0] t12 = sig=direct1 (ptr<managed>) -> ptr<managed> runtime @scoop_rt_materialize_exception(local7)
    store t12 -> local4
    store local4 -> local1
    br @scope.13
  block scope.13
    call managed-void-target2 sp<managed-call:5> live=[local1:ptr<managed>@0] sig=void2 (ptr<metadata>, ptr<managed>) runtime @scoop_rt_init_fail(init0, local1)
    t13 = aggregate () : {}
    invoke no-gc-void-target0 sig=void3 (ptr<managed>) runtime @scoop_rt_throw(local1) normal @throw.normal.2 unwind @try.handler_pad.6
    br @throw.normal.2
  block if.then.14
    br @if.merge.16
  block if.else.15
    t14 = MachineEq(InitializationOutcome) local0, machine<initialization-outcome>(InitializationOutcome(Failed)) : i1
    cbr t14 then @if.then.17 else @if.else.18
  block if.merge.16
    br @if.merge.3
  block if.then.17
    call managed-direct-target2 sp<managed-call:3> live=[] t15 = sig=direct2 (ptr<metadata>) -> ptr<managed> runtime @scoop_rt_init_failure(init0)
    store t15 -> local2
    throw local2
    unreachable
  block if.else.18
    call managed-direct-target3 sp<managed-call:1> live=[] t16 = sig=direct3 (ptr<metadata>) -> ptr<managed> runtime @scoop_rt_init_cycle_message(init0)
    store t16 -> local3
    call managed-void-target3 sp<managed-call:2> live=[local3:ptr<managed>@0] sig=void4 (ptr<managed>) external-fn1(local3)
    t17 = aggregate () : {}
    unreachable
  block invoke.normal.1
    t10 = aggregate () : {}
    call managed-void-target1 sp<managed-call:6> live=[] sig=void1 (ptr<metadata>) runtime @scoop_rt_init_succeed(init0)
    t11 = aggregate () : {}
    br @try.end.10
  block throw.normal.2
    unreachable
  fun @scoop$1$cb$b7055c6c7ab3c65208349b67cb262f3c236ad268ee5d093f7fc80b3e38cbadb3() -> i32
  block entry
    poll managed-void-target1 sp<managed-poll:0> live=[]
    call managed-void-target0 sp<managed-call:0> live=[] sig=void0 () local-fn2()
    t0 = aggregate () : {}
    t1 = global_load global0 : i32
    ret t1
  fun @scoop$1$cb$35c3dc5c3c3d7d1d3b6d2a47d7e6d6c88d61bca0e08966efecf4802178cdefa3() -> i32
  block entry
    poll managed-void-target1 sp<managed-poll:0> live=[]
    invoke managed-void-target0 sp<managed-invoke:0> roots=[] sig=void0 () local-fn0() normal @success unwind @failure
    br @success
  block success
    ret integer<UInt>(0x00000000)
  block failure
    (t0, t1) = landingpad : (exception_record, ptr<raw>)
    t2 = begin_catch t1 : ptr<managed>
    call managed-direct-target0 sp<managed-call:0> live=[t2:ptr<managed>@0] t3 = sig=direct0 (ptr<managed>) -> ptr<managed> runtime @scoop_rt_materialize_exception(t2)
    global_store global2, t3
    end_catch
    ret integer<UInt>(0x00000001)
  fun @scoop$1$cb$2a51b3a9ba4fbb9414a9b5c7a7947bb66fa60352090aaebd167146a490e2f64c() -> i32
  block entry
    poll managed-void-target1 sp<managed-poll:0> live=[]
    invoke managed-void-target0 sp<managed-invoke:0> roots=[] sig=void0 () local-fn2() normal @success unwind @failure
    br @success
  block success
    ret integer<UInt>(0x00000000)
  block failure
    (t0, t1) = landingpad : (exception_record, ptr<raw>)
    t2 = begin_catch t1 : ptr<managed>
    end_catch
    ret integer<UInt>(0x00000001)
  output executable @scoop$1$cb$231a9ff4d6fc765297e8eb2c6cee080892fcc69d9b541b4356dd49d5e5726fde
