compiler/driver/src/request/preflight/tests/core_library/snapshots/scoopc__request__preflight__tests__core_library__calls__initialization_call_mir.snap
---
source: compiler/driver/src/request/preflight/tests/core_library/calls.rs
expression: dump.text()
---
Module
  global0 initialized: Int managed initial=zeroed-for-runtime-unit
  global1 $init$failure$0: Any managed initial=zeroed-for-runtime-unit
  init0 top-level:initialized eager global0 initializer=@fn1 ensure=@fn2 failure=1 deps=[]
  fun main @fn0() -> Unit
    bb0 entry
      call value: Int = @fn3 direct
      return
  fun $init$body$0 @fn1() -> Unit
    bb0 entry
      val $dependency.argument.0: Int
        Type Int
        IntegerLiteral Int value=40 bits=0x00000028
      val $dependency.parameter.value: Int
        Type Int
        Local $dependency.argument.0
      call $call.1: Int = dependency-strong0 direct
        Type Int
        Local $dependency.parameter.value
      global_assign initialized
        Type Int
        Local $call.1
      return
  fun $init$ensure$0 @fn2() -> Unit
    bb0 entry
      call $init.state: machine<initialization-outcome> = @scoop_rt_init_enter direct
        Type Ptr<Unit>
        InitializationUnitAddress init0 top-level:initialized
      branch bb1 bb2
        Type Boolean
        Binary MachineEq(InitializationOutcome)
          Type machine<initialization-outcome>
          Local $init.state
          Type machine<initialization-outcome>
          MachineScalarLiteral InitializationOutcome(RunInitializer)
    bb1 if.then.1
      goto bb11
    bb2 if.else.2
      branch bb14 bb15
        Type Boolean
        Binary MachineEq(InitializationOutcome)
          Type machine<initialization-outcome>
          Local $init.state
          Type machine<initialization-outcome>
          MachineScalarLiteral InitializationOutcome(Ready)
    bb3 if.merge.3
      return
    bb4 try.unwind.4
      landing_pad cleanup=false
      goto bb5
    bb5 try.dispatch.5
      begin_catch
      goto bb12
    bb6 try.handler_pad.6
      landing_pad cleanup=true
      goto bb7
    bb7 try.handler_cleanup.7
      end_catch
      resume
    bb8 try.exit_pad.8
      landing_pad cleanup=true
      goto bb9
    bb9 try.exit_cleanup.9
      end_catch
      resume
    bb10 try.end.10
      goto bb3
    bb11 try.body.11 unwind bb4
      call @fn1 direct
      call @scoop_rt_init_succeed direct
        Type Ptr<Unit>
        InitializationUnitAddress init0 top-level:initialized
      goto bb10
    bb12 try.catch.12
      val $init.caught: Any
        Type Any
        Retype Any
          Type Any
          CaughtException
      goto bb13
    bb13 scope.13 unwind bb6
      call $init.materialized: Any = @scoop_rt_materialize_exception direct
        Type Any
        Local $init.caught
      call @scoop_rt_init_fail direct
        Type Ptr<Unit>
        InitializationUnitAddress init0 top-level:initialized
        Type Any
        Local $init.materialized
      throw unwind bb6
        Type Any
        Local $init.materialized
    bb14 if.then.14
      goto bb16
    bb15 if.else.15
      branch bb17 bb18
        Type Boolean
        Binary MachineEq(InitializationOutcome)
          Type machine<initialization-outcome>
          Local $init.state
          Type machine<initialization-outcome>
          MachineScalarLiteral InitializationOutcome(Failed)
    bb16 if.merge.16
      goto bb3
    bb17 if.then.17
      call $init.failure: Any = @scoop_rt_init_failure direct
        Type Ptr<Unit>
        InitializationUnitAddress init0 top-level:initialized
      throw
        Type Any
        Local $init.failure
    bb18 if.else.18
      call $init.message: String = @scoop_rt_init_cycle_message direct
        Type Ptr<Unit>
        InitializationUnitAddress init0 top-level:initialized
      call core-external0 direct
        Type String
        Local $init.message
      unreachable
    bb19 if.merge.19
      unreachable
  fun $get$initialized @fn3() -> Int
    bb0 entry
      call @fn2 direct
      return
        Type Int
        GlobalRead initialized
  output executable @fn0
